[metadata]
name = seeqler
version = 0.1.0
description = Database explorer
long_description = file: README.md
license = BSD 3-Clause License


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pyqt6
    sqlalchemy

[options.entry_points]
console_scripts =
    seeqler = seeqler.__main__:main
